--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.4",
+    "@t3-oss/env-nextjs": "^0.13.10",
     "better-auth": "^1.4.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
